# RootControlMapper

./: .gitignore  Cargo.toml  README.md  README.pt.md  build.sh  git-town.toml
dev/: guide.md  guide.pt.md
environment/release/: install.sh  root-ctrl-mapper
environment/release/data/json/: game_mode.json
environment/release/data/scripts/: record_obs.py
environment/release/json/: mouse_mode.json
environment/release/rcm_env/: generate_env.sh  requirements.txt
environment/release/rcm_lua/: generate_env.sh  pkg_lua.sh  run_lua.sh
environment/release/scripts/: pp-browser  record_obs.py
readme/: helper.md  helper.pt.md
src/: app.rs  conversor.rs  helper.rs  leitor.rs  main.rs  processor.rs  types.rs  version.rs
src/controller/: button_controller.rs  keyboard_controller.rs  mod.rs
src/interpreter/: gamepad_utils.rs  gamepad_virtual.rs  macroscript.rs  mod.rs  mousekeyboard.rs
src/interpreter/vk/: mod.rs  vk_clipboard.rs  vk_kb_layout.rs  vk_texteditor.rs  vk_types.rs  vk_ui.rs
src/processor/: macro_key.rs  mod.rs  runner.rs  utils.rs
