[package]
name = "root_ctrl_mapper"
version = "0.1.2"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "3.1.1"
validator = { version = "0.20", features = ["derive"] }
evdev = "0.12.1"
gilrs = "0.10"
log = "0.4"
env_logger = "0.11"
eframe = { version = "0.34", features = ["persistence"] }
arboard = "3.4"
indexmap = "2.0"
open = "5.3"
libc = "0.2"
# gtk4 = "0.7"
# glib = "0.18"
